Issue #3313: Contrary to the man page, a failed dlopen() call does not always set a dlerror() message.